@@ -31,5 +31,3 @@ Mac OS X 10.9.4
 
 # End of transcript or log.
 """]]
-
-> [[fixed|done]] --[[Joey]]
